frontend/src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

*::-webkit-scrollbar {
  width: 12px;
  height: 12px;
}

*::-webkit-scrollbar-track {
  background: rgba(0,0,0,0.3);
  border-radius: 0;
  box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
}

*::-webkit-scrollbar-thumb {
  background: rgba(0,0,0,0.4);
  border-radius: 6px;
  box-shadow: inset 0 0 5px rgb(24, 144, 255);
}

*::-webkit-scrollbar-thumb:hover {
  background-color: rgba(0,0,0,0.5);
}

